--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,68 @@
 annotated-types==0.7.0
 anyio==4.9.0
+bcrypt==4.0.1
 certifi==2025.7.14
+charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
 dnspython==2.7.0
+ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.116.1
 fastapi-cli==0.0.8
 fastapi-cloud-cli==0.1.5
+filelock==3.18.0
+fsspec==2025.7.0
+greenlet==3.2.3
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
+huggingface-hub==0.34.3
 idna==3.10
 Jinja2==3.1.6
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.27
+langchain-core==0.3.72
+langchain-huggingface==0.3.1
+langchain-text-splitters==0.3.9
+langgraph==0.6.3
+langgraph-checkpoint==2.1.1
+langgraph-prebuilt==0.6.3
+langgraph-sdk==0.2.0
+langsmith==0.4.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+orjson==3.11.1
+ormsgpack==1.10.0
+packaging==25.0
+passlib==1.7.4
+pyasn1==0.6.1
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
 python-dotenv==1.1.1
+python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.2
+requests==2.32.4
+requests-toolbelt==1.0.0
 rich==14.1.0
 rich-toolkit==0.14.9
 rignore==0.6.4
+rsa==4.9.1
 sentry-sdk==2.34.1
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.42
+sqlmodel==0.0.24
 starlette==0.47.2
+tenacity==9.1.2
+tokenizers==0.21.4
+tqdm==4.67.1
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
@@ -37,3 +70,5 @@ urllib3==2.5.0
 uvicorn==0.35.0
 watchfiles==1.1.0
 websockets==15.0.1
+xxhash==3.5.0
+zstandard==0.23.0
