--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,44 @@
-# Environments
-.env
-.env.*
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# macOS
+# General
 .DS_Store
-
-__pycache__/
-.vscode/
-
-# Logs
 *.log
+*.sqlite3
+*.env
+.env.*
 
-# Build artifacts
-build/
+# Python (FastAPI backend)
+__pycache__/
+*.py[cod]
+*.pyo
+*.egg
+*.egg-info/
 dist/
+build/
+.venv/
+venv/
+.mypy_cache/
+coverage/
+htmlcov/
+
+# Node.js (Next.js frontend)
+node_modules/
+.next/
+out/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-lock.yaml
+bun.lockb
+
+# Docker
+*.tar
+docker-compose.override.yml
+
+# VSCode and IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS-specific
+Thumbs.db
+ehthumbs.db
